fix: ai 생성 노드 저장 시 type이 ai-generated가 아닌 Tetx로 저장되도록